# bm8563

./: .astylerc  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  bm8563.c  bm8563.h  context7.json
.github/workflows/: ccpp.yml  ci.yml
tests/: CMakeLists.txt  Makefile  mock_i2c.c  mock_i2c.h  unit  unit.c
